--- a/languages/logdash-activity-log-es_ES.po
+++ b/languages/logdash-activity-log-es_ES.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: LogDash Activity Log\n"
 "POT-Creation-Date: 2024-07-09 14:44-0400\n"
-"PO-Revision-Date: 2024-08-06 17:02-0400\n"
+"PO-Revision-Date: 2024-08-07 08:56-0400\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_ES\n"
@@ -648,7 +648,7 @@ msgstr "Usuario inscrito en %s"
 #: src/EventCodes.php:222
 #, php-format
 msgid "Unenrolled to %s"
-msgstr "No inscripto en %s"
+msgstr "No inscrito en %s"
 
 #: src/EventCodes.php:223
 #, php-format
